--- a/index.html
+++ b/index.html
@@ -2,17 +2,24 @@
 <html lang="ja">
 <head>
 <meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
+<meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover,user-scalable=no" />
+<meta name="apple-mobile-web-app-capable" content="yes" />
 <title>崩れるタワー</title>
 <style>
-  html,body{margin:0;height:100%;background:#0e1012;color:#e7e9ea;font-family:system-ui,Segoe UI,Roboto,Helvetica,Arial}
+  html,body{margin:0;height:100%;background:#0e1012;color:#e7e9ea;font-family:system-ui,Segoe UI,Roboto,Helvetica,Arial;overscroll-behavior:none}
   #ui{position:fixed;left:12px;top:12px;display:flex;gap:.5rem;z-index:10;align-items:center}
   .btn{background:#181b20;border:1px solid #2a2f38;padding:.5rem .8rem;border-radius:10px;color:#e7e9ea;cursor:pointer}
   .btn:hover{background:#20242b}
   #panel{position:fixed;right:12px;top:12px;display:flex;gap:.75rem;z-index:10;background:#121418aa;border:1px solid #272c35;padding:.5rem .75rem;border-radius:12px}
-  #hint{position:fixed;left:12px;bottom:12px;background:#121418aa;border:1px solid #272c35;border-radius:8px;padding:.4rem .6rem;opacity:.9}
+  #hint{position:fixed;left:12px;bottom:12px;background:#121418aa;border:1px solid #272c35;border-radius:8px;padding:.45rem .6rem;opacity:.9;z-index:10}
   #toast{position:fixed;left:50%;top:14%;transform:translateX(-50%);padding:.6rem 1rem;border-radius:10px;background:#11151bdd;border:1px solid #2b3240;display:none;z-index:20}
+  #audioNote{position:fixed;left:50%;bottom:11%;transform:translateX(-50%);padding:.45rem .7rem;border-radius:10px;background:#0f1319cc;border:1px solid #2b3240;z-index:20;display:none}
   canvas{display:block;touch-action:none}
+  @supports (padding:max(0px)) {
+    #ui{left:calc(12px + env(safe-area-inset-left)); top:calc(12px + env(safe-area-inset-top))}
+    #panel{right:calc(12px + env(safe-area-inset-right)); top:calc(12px + env(safe-area-inset-top))}
+    #hint{left:calc(12px + env(safe-area-inset-left)); bottom:calc(12px + env(safe-area-inset-bottom))}
+  }
 </style>
 </head>
 <body>
@@ -20,7 +27,7 @@
     <button id="reset" class="btn">リセット</button>
     <button id="rebuild" class="btn">同じレベル</button>
     <button id="next" class="btn">次のレベル</button>
-    <button id="bgmBtn" class="btn">BGM:ON</button>
+    <button id="bgmToggle" class="btn" title="BGMのオン/オフ">♪BGM ON</button>
   </div>
   <div id="panel">
     <span>Lv.<span id="level">1</span></span>
@@ -30,110 +37,133 @@
   </div>
   <div id="hint">黒い“縦2段ターゲット”を全部落とすとクリア！ 弾はドラッグ→離すで発射。</div>
   <div id="toast">Stage Clear!</div>
+  <div id="audioNote">最初のタップで音とBGMが有効になります</div>
 
-  <!-- ローカルの matter.min.js を同じフォルダに置く -->
-  <script src="./matter.min.js"></script>
+  <!-- Matter.js（CDN版）-->
+  <script src="https://cdn.jsdelivr.net/npm/matter-js@0.19.0/build/matter.min.js"></script>
 
   <script>
   (()=> {
     const {Engine,Render,Runner,World,Bodies,Composite,Constraint,Body,Events,Mouse,MouseConstraint,Vector} = Matter;
 
-    // ==== 画像（同フォルダに ball.jpg / target.jpg があれば自動使用）========
+    // ==== 画像（任意） ======================
+    // 同フォルダに ball.jpg / target.jpg を置けば自動で貼られます（無くてもOK）
     const textures = { ball:null, target:null };
     const ballImg   = new Image(); ballImg.onload   = ()=>{ textures.ball   = ballImg; if(projectile) projectile.render.opacity=0; }; ballImg.src   = 'ball.jpg';
     const targetImg = new Image(); targetImg.onload = ()=>{ textures.target = targetImg; };                targetImg.src = 'target.jpg';
-    // =====================================================================
+    // =======================================
 
-    // ==== WebAudio（SFX + BGM） ==========================================
+    // ==== WebAudio：SFX + BGM ==============================
     const AudioCtx = window.AudioContext || window.webkitAudioContext;
     const audio = new AudioCtx();
-    // 環境音量
-    function envGain(duration=0.25, attack=0.002, release=0.18, peak=0.9, out=audio.destination){
+
+    // 軽いUIノート
+    const audioNote = document.getElementById('audioNote');
+    audioNote.style.display = 'block';
+    const resumeAudio = ()=>{ if(audio.state==='suspended') audio.resume(); document.removeEventListener('pointerdown', resumeAudio); audioNote.style.display='none'; };
+    document.addEventListener('pointerdown', resumeAudio, {once:true});
+
+    function envGain(duration=0.25, attack=0.002, release=0.18, peak=0.9){
       const g=audio.createGain(), t=audio.currentTime;
       g.gain.setValueAtTime(0,t); g.gain.linearRampToValueAtTime(peak,t+attack);
-      g.gain.exponentialRampToValueAtTime(0.0001, t+duration);
-      g.connect(out); return g;
+      g.gain.exponentialRampToValueAtTime(0.0001,t+duration); g.connect(audio.destination); return g;
     }
-    function oscBeep({freq=440,dur=0.15,type='sine',vol=0.5,slide=0,out=audio.destination}={}){
-      const o=audio.createOscillator(), g=envGain(dur,0.005,Math.max(0.05,dur*0.8),vol,out), t=audio.currentTime;
-      o.type=type; o.frequency.setValueAtTime(freq,t);
-      if(slide) o.frequency.linearRampToValueAtTime(freq+slide,t+dur*0.9);
+    function oscBeep({freq=440,dur=0.15,type='sine',vol=0.5,slide=0}={}){
+      const o=audio.createOscillator(), g=envGain(dur,0.005,Math.max(0.05,dur*0.8),vol), t=audio.currentTime;
+      o.type=type; o.frequency.setValueAtTime(freq,t); if(slide) o.frequency.linearRampToValueAtTime(freq+slide,t+dur*0.9);
       o.connect(g); o.start(t); o.stop(t+dur);
     }
-    function noiseBurst({dur=0.35,vol=0.6,hp=600,lp=5500,out=audio.destination}={}){
-      const n=audio.createBuffer(1,audio.sampleRate,audio.sampleRate), d=n.getChannelData(0);
-      for(let i=0;i<d.length;i++) d[i]=(Math.random()*2-1)*Math.pow(1-i/d.length,2);
+    function noiseBurst({dur=0.35,vol=0.6,hp=600,lp=5500}={}){
+      const n=audio.createBuffer(1,audio.sampleRate,Math.floor(audio.sampleRate*dur));
+      const d=n.getChannelData(0); for(let i=0;i<d.length;i++) d[i]=(Math.random()*2-1)*Math.pow(1-i/d.length,2);
       const src=audio.createBufferSource(); src.buffer=n;
       const hpf=audio.createBiquadFilter(); hpf.type='highpass'; hpf.frequency.value=hp;
       const lpf=audio.createBiquadFilter(); lpf.type='lowpass';  lpf.frequency.value=lp;
-      const g=envGain(dur,0.002,dur*0.85,vol,out);
-      src.connect(hpf); hpf.connect(lpf); lpf.connect(g);
-      const t=audio.currentTime; src.start(t); src.stop(t+dur);
+      const g=envGain(dur,0.002,dur*0.85,vol); src.connect(hpf); hpf.connect(lpf); lpf.connect(g);
+      const t=audio.currentTime; src.start(t);
     }
     function thunk({base=180,dur=0.18,vol=0.45}={}){ oscBeep({freq:base,dur,type:'square',vol,slide:-base*0.35}); }
     function twang(power=1){ const f=260+280*power; oscBeep({freq:f,dur:0.14,type:'triangle',vol:0.35,slide:-f*0.45}); }
-    function uiClick(){ oscBeep({freq:1200,dur:0.05,type:'square',vol:0.25}); }
+    function uiClick(){ oscBeep({freq:1200,dur=0.05,type:'square',vol:0.25}); }
     function fanfare(){ oscBeep({freq:740,dur:0.22,type:'square',vol:0.3}); setTimeout(()=>oscBeep({freq:988,dur:0.24,type:'square',vol:0.3}),120); }
 
-    // ---- BGM（超軽量のループ：ベース + アルペジオ + ハイハット + キック）----
-    const bgmBus = audio.createGain(); bgmBus.gain.value = 0.14; bgmBus.connect(audio.destination);
-    let bgmWanted = true, bgmPlaying=false, bgmTimer=null, bgmStep=0;
-    function startBGM(){
-      if(bgmPlaying) return; bgmPlaying=true;
-      bgmTimer = setInterval(()=>{
-        const step = (bgmStep++) % 32;        // 32ステップ（2小節想定）
-        // ベース（4分）
-        if(step % 4 === 0){
-          const seq = [55,62,65,62];          // A2, D3, F3, D3っぽい進行
-          const f = seq[(step/4)|0 % seq.length];
-          oscBeep({freq:f, dur:0.12, type:'sine', vol:0.22, slide:-20, out:bgmBus});
-        }
-        // アルペジオ（16分）
-        const arp = [440,494,523,587,659,587,523,494]; // A4～あたり
-        const fa = arp[step % arp.length] / 2;         // 1オクターブ下げて控えめに
-        oscBeep({freq:fa, dur:0.08, type:'triangle', vol:0.12, out:bgmBus});
+    // ふんわりBGM（低音Pad＋上モノ、超軽量・ループ）
+    const bgm = (()=> {
+      let playing=false, master=null, padO=null, leadO=null, timer=null, step=0;
+      const bpm=78, beat=60/bpm; // 1拍
+      const prog = [ // A- F - C - G っぽい進行
+        [220.00, 277.18],  // A, C#
+        [174.61, 220.00],  // F, A
+        [164.81, 246.94],  // E, B
+        [196.00, 246.94],  // G, B
+      ];
+      function start(){
+        if(playing) return;
+        master=audio.createGain(); master.gain.value=0.0; master.connect(audio.destination);
+        // Pad
+        padO=audio.createOscillator(); padO.type='sine'; padO.frequency.value=prog[0][0];
+        const padGain=audio.createGain(); padGain.gain.value=0.06; padO.connect(padGain); padGain.connect(master); padO.start();
+        // Lead
+        leadO=audio.createOscillator(); leadO.type='triangle'; leadO.frequency.value=prog[0][1];
+        const ldGain=audio.createGain(); ldGain.gain.value=0.045; leadO.connect(ldGain); ldGain.connect(master); leadO.start();
 
-        // ハイハット（8分）
-        if(step % 2 === 0) noiseBurst({dur:0.03, vol:0.09, hp:7000, lp:9000, out:bgmBus});
-        // キック（2分）
-        if(step % 8 === 0) oscBeep({freq:80, dur:0.11, type:'sine', vol:0.28, slide:-40, out:bgmBus});
-      }, 125); // 125ms = 16分（BPM120相当）
-    }
-    function stopBGM(){ if(!bgmPlaying) return; clearInterval(bgmTimer); bgmTimer=null; bgmPlaying=false; }
-    const bgmBtn = document.getElementById('bgmBtn');
-    bgmBtn.onclick = ()=>{
-      uiClick();
-      bgmWanted = !bgmWanted;
-      if(bgmWanted){ if(audio.state==='suspended') audio.resume(); startBGM(); bgmBtn.textContent='BGM:ON'; }
-      else { stopBGM(); bgmBtn.textContent='BGM:OFF'; }
-    };
-    // 最初のユーザー操作で再生許可＆BGM自動開始
-    document.addEventListener('pointerdown', ()=>{
-      if(audio.state==='suspended') audio.resume();
-      if(bgmWanted && !bgmPlaying) startBGM();
-    }, {once:true});
-    // =====================================================================
+        // フェードイン
+        const t=audio.currentTime; master.gain.linearRampToValueAtTime(0.09, t+1.2);
 
-    // ==== 物理 ============================================================
+        // コード進行＆軽いメロ
+        step=0;
+        timer=setInterval(()=>{
+          const bar = Math.floor(step/4)%prog.length;
+          const [f1,f2]=prog[bar];
+          // 拍頭でコード更新
+          if(step%4===0){
+            padO.frequency.setTargetAtTime(f1, audio.currentTime, 0.08);
+            leadO.frequency.setTargetAtTime(f2, audio.currentTime, 0.05);
+          }
+          // 拍3でちょっと上がる
+          if(step%4===2){
+            leadO.frequency.setTargetAtTime(f2*1.125, audio.currentTime, 0.05);
+          }
+          step++;
+        }, beat*1000);
+        playing=true;
+      }
+      function stop(){
+        if(!playing) return;
+        const t=audio.currentTime;
+        master.gain.cancelScheduledValues(t);
+        master.gain.linearRampToValueAtTime(0, t+0.5);
+        setTimeout(()=>{
+          try{ padO.stop(); leadO.stop(); }catch(e){}
+          padO=null; leadO=null;
+          if(timer) clearInterval(timer), timer=null;
+          playing=false;
+        },520);
+      }
+      function toggle(){ playing?stop():start(); }
+      function isPlaying(){ return playing; }
+      return {start,stop,toggle,isPlaying};
+    })();
+
+    // ==== 物理セットアップ ==================================
     const CF={WORLD:0x0001,PROJECTILE:0x0002,BLOCK:0x0004,PARTICLE:0x0008,TARGET:0x0010};
-
     const engine=Engine.create(), world=engine.world;
     engine.positionIterations=8; engine.velocityIterations=6;
     world.gravity.y=1.05;
 
     let W=innerWidth, H=innerHeight;
 
-    // 遠目表示
-    const ZOOM=1.8;
+    // 遠目表示＆モバイル最適化
+    const ZOOM = (Math.min(W,H) < 600 ? 2.0 : 1.8);
     const render=Render.create({
       element:document.body, engine,
       options:{ width:W,height:H,wireframes:false,background:'#0e1012',
-        pixelRatio:Math.min(devicePixelRatio||1,1.75), hasBounds:true }
+        pixelRatio:Math.min(devicePixelRatio||1,2), hasBounds:true }
     });
     Render.run(render);
     const runner=Runner.create(); Runner.run(runner,engine);
 
-    function applyZoomOut(){
+    function applyZoom(){
       const cx=W/2, cy=H/2, halfW=(W*ZOOM)/2, halfH=(H*ZOOM)/2;
       render.bounds.min.x=cx-halfW; render.bounds.max.x=cx+halfW;
       render.bounds.min.y=cy-halfH; render.bounds.max.y=cy+halfH; syncMouseScale();
@@ -145,7 +175,7 @@
     function sx(){ return render.options.width /(render.bounds.max.x-render.bounds.min.x); }
     function sy(){ return render.options.height/(render.bounds.max.y-render.bounds.min.y); }
 
-    // 壁（床なし）
+    // 壁（床なし＝画面下は空間）
     const T=80, DEPTH_FACTOR=3;
     const wallMat={isStatic:true,restitution:1.0,friction:0,frictionStatic:0,collisionFilter:{category:CF.WORLD}};
     let leftW,rightW,deepLimitY=0;
@@ -158,7 +188,7 @@
     }
     buildWorldBounds();
 
-    // 土台
+    // 土台（摩擦UP）
     let platform;
     const buildPlatform=()=>{
       if(platform) World.remove(world,platform);
@@ -177,21 +207,20 @@
     let blocks=[],targets=[],level=1,score=0,shots=0;
     const scoreEl=document.getElementById('score'), shotsEl=document.getElementById('shots'), levelEl=document.getElementById('level'), targetsEl=document.getElementById('targetsLeft'), toastEl=document.getElementById('toast');
 
-    // ブロック
     const makeBlock=(w,h,x,y)=>Bodies.rectangle(x,y,w,h,{
       chamfer:{radius:6}, friction:0.6, frictionStatic:1.0, restitution:0.02, density:0.0035,
       collisionFilter:{category:CF.BLOCK,mask:CF.WORLD|CF.PROJECTILE|CF.BLOCK|CF.TARGET},
       render:{fillStyle:colors[Math.floor(Math.random()*colors.length)]}
     });
 
-    // ターゲット（黒・後で画像を貼る）
+    // ターゲット（黒：画像はafterRenderで上貼り）
     const makeTargetRect=(w,h,x,y)=>Bodies.rectangle(x,y,w,h,{
       chamfer:0, friction:0.6, frictionStatic:1.0, restitution:0.02, density:0.0038,
       collisionFilter:{category:CF.TARGET,mask:CF.WORLD|CF.PROJECTILE|CF.BLOCK|CF.TARGET},
       render:{ fillStyle:"#000000" }
     });
 
-    // タワー
+    // タワー生成
     const buildTower=(lv=1)=>{
       for(const b of blocks) World.remove(world,b);
       for(const t of targets) World.remove(world,t);
@@ -201,11 +230,10 @@
       const bh=Math.max(18,Math.min(32,24+Math.floor(Math.random()*6)));
       const baseX=platform.position.x, baseY=platform.position.y-24-bh/2;
       const targetRatio=0.10, gapX=0.5, gapY=0.5;
-
       const cellCenter=(r,c)=>({x:baseX-(cols-1)*bw/2 + c*bw, y:baseY - r*(bh+2)});
       const used=Array.from({length:rows},()=>Array(cols).fill(false));
 
-      // 縦2段ターゲット
+      // 縦2段ターゲットを混ぜる
       for(let r=0;r<rows-1;r++){
         for(let c=0;c<cols;c++){
           if(Math.random()>=targetRatio || used[r][c] || used[r+1][c]) continue;
@@ -223,7 +251,7 @@
         targets.push(makeTargetRect(w,h,ctr.x,cy));
         used[r][c]=used[r+1][c]=true;
       }
-      // 残りは通常ブロック
+      // その他は通常ブロック
       for(let r=0;r<rows;r++){
         for(let c=0;c<cols;c++){
           if(used[r][c]) continue;
@@ -232,7 +260,6 @@
           used[r][c]=true;
         }
       }
-
       World.add(world,[...blocks,...targets]);
 
       // 自壊防止
@@ -245,10 +272,10 @@
     // スリング＆弾
     const anchor={x:Math.max(160,W*0.24),y:Math.min(H-140,H-160)};
     let projectile=null, elastic=null;
-    const GRAB_RANGE=200;
+    const GRAB_RANGE = 280; // スマホ向け拡大
     let grabProxy=null, grabLink=null;
 
-    // 後方ストローク最大長
+    // 後方最大ストローク
     let maxPull=anchor.x;
     function recalcMaxPull(){
       const innerFaceX=leftW.position.x+T/2;
@@ -258,12 +285,12 @@
     }
 
     function createProjectile(){
-      projectile=Bodies.circle(anchor.x,anchor.y,39,{
+      projectile=Bodies.circle(anchor.x,anchor.y,39,{ // 1.5倍サイズ
         density:0.014, frictionAir:0.013, restitution:.30, friction:.07,
         collisionFilter:{category:CF.PROJECTILE,mask:CF.WORLD|CF.BLOCK|CF.TARGET|CF.PROJECTILE},
         render:{fillStyle:"#e8eaed",strokeStyle:"#000",lineWidth:1.4, opacity:textures.ball?0:1}
       });
-      // ★ユーザー要望の弱めのゴム（前回安定版の値）
+      // ゴム（弱め）
       elastic=Constraint.create({pointA:anchor,bodyB:projectile,stiffness:.035,damping:.04,render:{visible:false}});
 
       grabProxy=Bodies.circle(anchor.x,anchor.y,GRAB_RANGE,{isSensor:true,collisionFilter:{category:CF.PROJECTILE,mask:CF.PROJECTILE},render:{visible:false}});
@@ -282,7 +309,7 @@
       const kx=sx(), ky=sy(); mouse.scale.x=kx; mouse.scale.y=ky; mouse.pixelRatio=render.options.pixelRatio;
     }
 
-    // ゴム（手前に描画）
+    // ゴム（壁より奥に描画）
     Events.on(render,'beforeRender',()=>{
       if(!projectile) return;
       const ctx=render.context, a=toScreen(anchor.x,anchor.y), b=toScreen(projectile.position.x,projectile.position.y);
@@ -290,7 +317,7 @@
       ctx.beginPath(); ctx.moveTo(a.x,a.y); ctx.lineTo(b.x,b.y); ctx.stroke(); ctx.restore();
     });
 
-    // 画像描画
+    // 画像の自前描画：弾＆ターゲット
     Events.on(render,'afterRender',()=>{
       const ctx=render.context;
       if(textures.ball && projectile){
@@ -311,7 +338,7 @@
       }
     });
 
-    // 爆発
+    // 爆発（炎色 + SFX）
     function explodeAt(pos,radius=170,power=0.038){
       const all=blocks.concat(targets);
       for(const body of all){
@@ -384,7 +411,7 @@
       }
     });
 
-    // 衝突
+    // 衝突（各ブロック1回・壁1回だけ音）
     Events.on(engine,'collisionStart',ev=>{
       if(!launched) return;
       for(const p of ev.pairs){
@@ -402,7 +429,7 @@
       }
     });
 
-    // スコア/クリア
+    // スコア/クリア（落下）
     const gone=new Set();
     function onFallen(body){
       if(gone.has(body.id)) return; gone.add(body.id);
@@ -460,13 +487,25 @@
       for(const b of Composite.allBodies(world)){ if(!keep.has(b.id)) World.remove(world,b); }
       buildPlatform(); buildTower(level); createProjectile();
       launched=false; impacted=false; restFrames=0; clearTimeout(reloadTimer); reloadTimer=null;
-      mctl.collisionFilter.mask=CF.PROJECTILE; applyZoomOut(); gone.clear(); recalcMaxPull();
+      mctl.collisionFilter.mask=CF.PROJECTILE; applyZoom(); gone.clear(); recalcMaxPull();
     };
     const same=()=>reset();
     const next=()=>{ level=Math.min(12,level+1); levelEl.textContent=level; reset(); };
     document.getElementById('reset').onclick=()=>{ uiClick(); reset(); };
     document.getElementById('rebuild').onclick=()=>{ uiClick(); same(); };
     document.getElementById('next').onclick=()=>{ uiClick(); next(); };
+
+    // BGMトグル
+    const bgmBtn = document.getElementById('bgmToggle');
+    bgmBtn.onclick = ()=>{ uiClick(); if(audio.state==='suspended'){audio.resume();} bgm.toggle(); bgmBtn.textContent = bgm.isPlaying() ? '♪BGM OFF' : '♪BGM ON'; };
+    // 初回タップで自動開始（控えめ音量）
+    document.addEventListener('pointerdown', ()=>{ if(!bgm.isPlaying()) bgm.start(); bgmBtn.textContent='♪BGM OFF'; }, {once:true});
+
+    // タブ非表示でBGM停止・復帰
+    document.addEventListener('visibilitychange', ()=>{
+      if(document.hidden){ if(bgm.isPlaying()) bgm.stop(); }
+      else { /* ユーザー操作後は再開可 */ }
+    });
 
     // リサイズ
     addEventListener('resize',()=>{
@@ -475,11 +514,11 @@
       buildWorldBounds(); Body.setPosition(sensor,{x:W/2,y:H-10}); buildPlatform();
       anchor.x=Math.max(160,W*0.24); anchor.y=Math.min(H-140,H-160);
       if(!launched && projectile){ Body.setPosition(projectile,{x:anchor.x,y:anchor.y}); if(grabProxy) Body.setPosition(grabProxy,{x:anchor.x,y:anchor.y}); }
-      applyZoomOut(); recalcMaxPull();
+      applyZoom(); recalcMaxPull();
     });
 
     // 起動
-    buildTower(level); applyZoomOut(); recalcMaxPull();
+    buildTower(level); applyZoom(); recalcMaxPull();
   })();
   </script>
 </body>
