--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <div id="audioNote">最初のタップで音とBGMが有効になります</div>
 
   <!-- Matter.js（CDN版）-->
-  <script src="https://cdn.jsdelivr.net/npm/matter-js@0.19.0/build/matter.min.js"></script>
+  <script src="https://./matter.min.js"></script>
 
   <script>
   (()=> {
